<resources>
    <string name="app_name">Scouting App 4590</string>
    <string name="team">Team #</string>
    <string name="game">Game #</string>
    <string name="cycles">Cycles:</string>
    <string name="auto_balls">Auto Balls:</string>
    <string name="Teleop">Teleop Balls:</string>
    <string name="zero">0</string>
    <string name="negative">-</string>
    <string name="positive">+</string>
    <string name="myimage">MyImage</string>
    <string name="submit">SUBMIT</string>
    <string name="climbed">CLIMBED</string>
    <string name="comments">Comments</string>
    <string name="no">NO</string>
    <string name="by_of_rotations">BY # OF ROTATIONS</string>
    <string name="color_wheel">Color Wheel:</string>
    <string name="by_color">BY COLOR</string>
    <string name="xxxxxx">XXXXXX</string>
    <string name="generate_pin">GENERATE PIN</string>
    <string name="lazy">TODO</string>
    <string name="pin">PIN</string>
    <string name="login">LOGIN</string>
    <string name="enter_pin">ENTER PIN</string>
    <string name="textview">TextView</string>
    <string name="button">Button</string>
    <string name="scouter">Scouter</string>
    <string name="qual_69">Qual 69</string>
    <string name="_254">254</string>
    <string name="_1574">1574</string>
    <string name="_4590">4590</string>
    <string name="_1690">1690</string>
    <string name="_1619">1619</string>
    <string name="_1687">1687</string>
    <string name="test">test</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="greenblitz_new_logo">Greenblitz new logo</string>
    <string name="error_msg">Error, status not found</string>
    <string name="games_played">Games Played:</string>
    <string name="send">send</string>
    <string name="cancel">cancel</string>
	<string name="your_device_appears_to_have_communication_problems">Your device appears to have communication problems.</string>
</resources>
