<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/black"
	android:orientation="vertical"
	tools:context=".ScoutingPrompt">

	<TableLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="5"
		android:stretchColumns="2">

		<TableRow
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<TextView
				android:id="@+id/team"
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:text="@string/team"
				android:textAlignment="center"
				android:textColor="@color/white" />

			<TextView
				android:id="@+id/game"
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:text="@string/game"
				android:textAlignment="center"
				android:textColor="@color/white" />
		</TableRow>

		<TableRow
			android:layout_width="match_parent"
			android:layout_height="match_parent">

			<TextView
				android:id="@+id/textView2"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/cycles"
				android:textAlignment="center"
				android:textColor="@color/white"
				android:textSize="16sp"
				android:textStyle="bold" />

		</TableRow>

		<TableRow
			android:layout_width="match_parent"
			android:layout_height="match_parent">

			<Button
				android:id="@+id/lessCycles"
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:background="@drawable/rounded_button"
				android:onClick="addPoints"
				android:text="@string/negative"
				android:textSize="20sp"
				android:textStyle="bold"
				tools:ignore="DuplicateSpeakableTextCheck" />

			<TextView
				android:id="@+id/cycles"
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:text="@string/zero"
				android:textAlignment="center"
				android:textColor="@color/white"
				android:textSize="34sp"
				android:textStyle="bold" />

			<Button
				android:id="@+id/moreCycles"
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:background="@drawable/rounded_button"
				android:onClick="addPoints"
				android:text="@string/positive"
				android:textSize="20sp"
				android:textStyle="bold"
				tools:ignore="DuplicateSpeakableTextCheck" />

		</TableRow>

		<TableRow
			android:layout_width="match_parent"
			android:layout_height="match_parent">

			<TextView
				android:id="@+id/textView"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/auto_balls"
				android:textAlignment="center"
				android:textColor="@color/white"
				android:textSize="16sp"
				android:textStyle="bold" />

		</TableRow>

		<TableRow
			android:layout_width="match_parent"
			android:layout_height="match_parent">

			<Button
				android:id="@+id/lessAutoBalls"
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:background="@drawable/rounded_button"
				android:onClick="addPoints"
				android:text="@string/negative"
				android:textSize="20sp"
				android:textStyle="bold" />

			<TextView
				android:id="@+id/autoBalls"
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:text="@string/zero"
				android:textAlignment="center"
				android:textColor="@color/white"
				android:textSize="34sp"
				android:textStyle="bold" />

			<Button
				android:id="@+id/moreAutoBalls"
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:background="@drawable/rounded_button"
				android:onClick="addPoints"
				android:text="@string/positive"
				android:textSize="20sp"
				android:textStyle="bold" />

		</TableRow>

		<TableRow
			android:layout_width="match_parent"
			android:layout_height="match_parent">

			<TextView
				android:id="@+id/textView3"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/Teleop"
				android:textAlignment="center"
				android:textColor="@color/white"
				android:textSize="16sp"
				android:textStyle="bold" />

		</TableRow>

		<TableRow
			android:layout_width="match_parent"
			android:layout_height="match_parent">

			<Button
				android:id="@+id/lessTeleBalls"
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:background="@drawable/rounded_button"
				android:onClick="addPoints"
				android:text="@string/negative"
				android:textSize="20sp"
				android:textStyle="bold" />

			<TextView
				android:id="@+id/teleopBalls"
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:text="@string/zero"
				android:textAlignment="center"
				android:textColor="@color/white"
				android:textSize="34sp"
				android:textStyle="bold" />

			<Button
				android:id="@+id/moreTeleBalls"
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:background="@drawable/rounded_button"
				android:onClick="addPoints"
				android:text="@string/positive"
				android:textSize="20sp"
				android:textStyle="bold" />

		</TableRow>

		<TableRow
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_weight="1"
			android:gravity="center">

			<Space
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1" />

			<Switch
				android:id="@+id/climbedSwitch"
				android:layout_width="0dp"
				android:layout_height="fill_parent"
				android:layout_weight="2"
				android:text="@string/climbed"
				android:textAlignment="center"
				android:textColor="@color/white"
				android:textSize="14sp"
				tools:ignore="Suspicious0dp,UseSwitchCompatOrMaterialXml" />


			<Space
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1" />

		</TableRow>

		<TableRow
			android:layout_width="match_parent"
			android:layout_height="match_parent">

			<TextView
				android:id="@+id/textView4"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/color_wheel"
				android:textAlignment="center"
				android:textColor="@color/white"
				android:textSize="16sp"
				android:textStyle="bold" />

		</TableRow>

		<TableRow
			android:layout_width="match_parent"
			android:layout_height="match_parent">

			<CheckBox
				android:id="@+id/rotationCheckBox"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/by_of_rotations"
				android:textColor="@color/white" />

			<CheckBox
				android:id="@+id/colorCheckBox"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/by_color"
				android:textColor="@color/white" />
		</TableRow>

	</TableLayout>

	<EditText
		android:id="@+id/commentsTextBox"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="3"
		android:autofillHints="name"
		android:elegantTextHeight="false"
		android:gravity="top"
		android:hint="@string/comments"
		android:inputType="textMultiLine"
		android:outlineProvider="bounds"
		android:textAlignment="viewStart"
		android:textColor="@color/white"
		android:textColorHint="@color/gray"
		tools:ignore="RtlCompat" />

	<Button
		android:id="@+id/SUBMIT_BUTTON"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:layout_weight="0.4"
		android:background="@drawable/rounded_button"
		android:onClick="submit"
		android:text="@string/submit"
		android:textSize="20sp"
		android:textStyle="bold"
		tools:ignore="OnClick,Suspicious0dp" />

</LinearLayout>