<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".activities.CoachInformation">

	<LinearLayout
		android:id="@+id/coachInfo"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">

			<LinearLayout
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:orientation="horizontal">

				<ToggleButton
					android:id="@+id/feature_info"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="3"
					android:onClick="changeInfo"
					tools:ignore="NestedWeights,OnClick" />

				<Spinner
					android:id="@+id/feature_selection"
					android:layout_width="0dp"
					android:layout_height="match_parent"
					android:layout_weight="7"
					android:background="@drawable/button_border_qual_clicked"
					android:gravity="center_horizontal"
					android:textAlignment="center" />
			</LinearLayout>

			<LinearLayout
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:orientation="horizontal">

				<Spinner
					android:id="@+id/match_selection"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="7"
					android:background="@drawable/button_border_qual_clicked"
					android:gravity="center_horizontal"
					android:textAlignment="center" />

				<ToggleButton
					android:id="@+id/qualInfo"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_marginBottom="2dp"
					android:layout_weight="3"
					android:background="@drawable/button_border_qual_unclicked"
					android:onClick="changeInfo"
					android:text="@string/togglebutton"
					android:textColor="@color/white"
					android:textOff="@string/qual_69"
					android:textOn="@string/qual_69" />
			</LinearLayout>
		</LinearLayout>

		<LinearLayout
			android:id="@+id/teams"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginEnd="2dp"
			android:baselineAligned="false"
			android:orientation="horizontal">

			<LinearLayout
				android:id="@+id/redAlliance"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:orientation="horizontal">

				<LinearLayout
					android:id="@+id/redTeams"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:orientation="vertical">

					<ToggleButton
						android:id="@+id/redTeam1"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginBottom="2dp"
						android:background="@drawable/button_border_red_unclicked"
						android:onClick="changeInfo"
						android:text="@string/togglebutton"
						android:textColor="@color/white"
						android:textOff="@string/_4590"
						android:textOn="@string/_4590" />

					<ToggleButton
						android:id="@+id/redTeam2"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginBottom="2dp"
						android:background="@drawable/button_border_red_unclicked"
						android:onClick="changeInfo"
						android:text="@string/togglebutton"
						android:textColor="@color/white"
						android:textOff="@string/_1574"
						android:textOn="@string/_1574" />

					<ToggleButton
						android:id="@+id/redTeam3"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:background="@drawable/button_border_red_unclicked"
						android:onClick="changeInfo"
						android:text="@string/togglebutton"
						android:textColor="@color/white"
						android:textOff="@string/_1619"
						android:textOn="@string/_1619" />
				</LinearLayout>

				<ToggleButton
					android:id="@+id/redAllianceButton"
					android:layout_width="0dp"
					android:layout_height="match_parent"
					android:layout_margin="2dp"
					android:layout_weight="1"
					android:background="@drawable/button_border_red_unclicked"
					android:onClick="changeInfo"
					android:textOff=""
					android:textOn="" />
			</LinearLayout>

			<LinearLayout
				android:id="@+id/blueAlliance"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:orientation="horizontal">

				<ToggleButton
					android:id="@+id/blueAllianceButton"
					android:layout_width="0dp"
					android:layout_height="match_parent"
					android:layout_margin="2dp"
					android:layout_weight="1"
					android:background="@drawable/button_border_blue_unclicked"
					android:onClick="changeInfo"
					android:textOff=""
					android:textOn="" />

				<LinearLayout
					android:id="@+id/blueTeams"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginEnd="2dp"
					android:layout_marginRight="2dp"
					android:orientation="vertical"
					android:visibility="visible">

					<ToggleButton
						android:id="@+id/blueTeam1"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginBottom="2dp"
						android:layout_weight="1"
						android:background="@drawable/button_border_blue_unclicked"
						android:onClick="changeInfo"
						android:text="@string/togglebutton"
						android:textColor="@color/white"
						android:textOff="@string/_1687"
						android:textOn="@string/_1687" />

					<ToggleButton
						android:id="@+id/blueTeam2"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginBottom="2dp"
						android:layout_weight="1"
						android:background="@drawable/button_border_blue_unclicked"
						android:onClick="changeInfo"
						android:text="@string/togglebutton"
						android:textColor="@color/white"
						android:textOff="@string/_1690"
						android:textOn="@string/_1690" />

					<ToggleButton
						android:id="@+id/blueTeam3"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_weight="1"
						android:background="@drawable/button_border_blue_unclicked"
						android:onClick="changeInfo"
						android:text="@string/togglebutton"
						android:textColor="@color/white"
						android:textOff="@string/_254"
						android:textOn="@string/_254" />
				</LinearLayout>
			</LinearLayout>
		</LinearLayout>

		<ImageView
			android:id="@+id/image1"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:contentDescription="@string/greenblitz_new_logo"
			android:src="@drawable/new_logo4590"
			android:visibility="invisible" />

	</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>